# dating_match

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
agents/: __init__.py  agent_hello.py  agent_hi.py  config.py  dating_coach.py  self_discovery.py  utils.py
backend/: Dockerfile  app.py  cli.py  config.py  extensions.py  requirements.txt
backend/models/: __init__.py  user.py
backend/routes/: auth.py  dating_coach.py  health.py  self_discovery_chat.py
client_a2a/: simple_messaging.py  test_client.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx
frontend/src/components/: ChatBox.jsx  DatingCoachChatBox.jsx  NavBar.jsx
frontend/src/hooks/: AuthContext.jsx  ChatContext.jsx  DatingCoachChatContext.jsx
frontend/src/pages/: Account.jsx  CreateAccount.jsx  DatingCoach.jsx  LandingPage.jsx  Login.jsx  Overview.jsx  SelfDiscovery.jsx
frontend/src/router/: PrivateRoute.jsx
server_a2a/: Dockerfile  __init__.py  agent_executor.py  config.py  main.py  requirements.txt  utils.py
