[project]
name = "dating-a2a"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.6",
    "uvicorn>=0.36.0",
    "Flask==3.0.3",
    "Flask-SQLAlchemy==3.1.0",
    "SQLAlchemy==2.0.39",
    "psycopg[binary,pool]==3.2.2",
    "python-dotenv==1.0.1",
    "Flask-CORS==4.0.0",
    "passlib[bcrypt]==1.7.4",
    "flask-migrate>=4.1.0",
    "google-generativeai>=0.8.5",
]


[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["server_a2a"]
